src/test/deca/codegen/valid/Convfloat_print.deca
// Description:
//    convertion to float
//
// Resultats:
//     2.00000e+00
//   
// Historique:
//    cree le 01/01/2023

{
   float a = 1;
   int b = 2;
   println(a = b);
}


