src/test/deca/codegen/invalid/Division_0.deca
// Description:
//    division par 0.0
//
// Resultats:
//    Erreur : Debordement de pile non codable ou division par 0.0
//
// Historique:
//    cree le 01/01/2023

{
	float a = 5/0.0;
}


